# Asymmetric-Multi-Keyword-Fuzzy-Search

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FYP2026_MAIN  README.md  package.json  run.sh
documentation/End Semester Review/: CS22B1090.pptx
documentation/End Semester Review/CS22B1090/: iiitdmdiss.cls  report.tex
documentation/Mid Semester Review/: CS22B1090.pptx
documentation/Mid Semester Review/CS22B1090/: References.bib  iiitdmdiss.cls  report.tex
documentation/Mid Semester Review/CS22B1090/Chapter1/: chapter1.tex
documentation/Mid Semester Review/CS22B1090/Chapter2/: chapter2.tex
documentation/Mid Semester Review/CS22B1090/Chapter3/: chapter3.tex
documentation/Mid Semester Review/CS22B1090/Chapter4/: chapter4.tex
documentation/Mid Semester Review/CS22B1090/Chapter5/: chapter5.tex
include/: Bloom.hpp  IndexGen.hpp  KeyGen.hpp  QueryGen.hpp  Scheme.hpp  SecretKey.hpp
src/: main.cpp
static/: app.js  style.css
templates/: index.html
test/: documents.csv
